--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>你好 我爱你</h1>
+  <h1>菩提本无树，
+      明镜亦非台，
+      本是无一物，
+      何处惹尘埃</h1>
 </body>
 </html>
